--- a/App/app/src/main/res/values/themes.xml
+++ b/App/app/src/main/res/values/themes.xml
@@ -2,16 +2,36 @@
     <!-- Base application theme. -->
     <style name="Theme.LivStory" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/colorAccent</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/black</item>
+        <item name="colorSecondary">#94D0CC</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="android:fontFamily">@font/poppins</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="android:fontFamily">@font/noto_sans</item>
+        <item name="colorOnSecondary">@color/textColor</item>
+        <item name="android:textColor">@color/textColor</item>
+        <item name="android:colorBackground">#130031</item>
+
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
-        <!-- Customize your theme here. -->
+        <item name="android:statusBarColor" tools:targetApi="l">#130031</item>
+        <item name="android:windowLightStatusBar">false</item>
+
+    </style>
+
+    <style name="AppTheme.FullScreenDialog" parent="Theme.MaterialComponents.Light.Dialog">
+        <item name="colorPrimary">@color/colorAccent</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">#94D0CC</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="android:fontFamily">@font/noto_sans</item>
+        <item name="colorOnSecondary">@color/textColor</item>
+        <item name="android:textColor">@color/textColor</item>
+        <item name="android:colorBackground">#130031</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:statusBarColor" tools:targetApi="l">#130031</item>
+        <item name="actionMenuTextColor">@color/colorAccent</item>
     </style>
 </resources>
