--- a/AdminApp/app/src/main/res/layout/activity_sign_in.xml
+++ b/AdminApp/app/src/main/res/layout/activity_sign_in.xml
@@ -58,8 +58,8 @@
                         android:id="@+id/email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:inputType="textEmailAddress"
                         android:textColor="@color/textColor" />
-                    android:inputType="textEmailAddress" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -85,8 +85,8 @@
                         android:id="@+id/password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:inputType="textPassword"
                         android:textColor="@color/textColor" />
-                    android:inputType="textEmailAddress" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
