--- a/AdminApp/app/src/main/res/menu/menu_main.xml
+++ b/AdminApp/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/add"
+        android:icon="@drawable/ic_baseline_add_24"
+        android:title="Add"
+        app:showAsAction="always" />
     <item
         android:id="@+id/logout"
         android:title="Logout" />
