--- a/App/app/src/main/res/layout/fragment_report.xml
+++ b/App/app/src/main/res/layout/fragment_report.xml
@@ -37,9 +37,18 @@
             android:textColor="@color/textColor" />
     </com.google.android.material.textfield.TextInputLayout>
 
+
     <Button
         android:id="@+id/submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SUBMIT" />
+        android:backgroundTint="@color/cardTextColor"
+        android:paddingTop="@dimen/margin_medium"
+        android:paddingBottom="@dimen/margin_medium"
+        android:text="@string/submit"
+        android:textColor="#000000"
+        app:cornerRadius="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </LinearLayout>
