--- a/App/app/src/main/res/values/dimens.xml
+++ b/App/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="margin_medium">16dp</dimen>
     <dimen name="strokeWidth">2dp</dimen>
+    <dimen name="margin_large">32dp</dimen>
 </resources>
