--- a/App/app/src/main/res/layout/activity_splash.xml
+++ b/App/app/src/main/res/layout/activity_splash.xml
@@ -9,8 +9,8 @@
     android:orientation="vertical"
     tools:context=".SplashActivity">
 
-
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="72dp"
@@ -21,5 +21,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_text_logo" />
+        app:srcCompat="@drawable/ic_logo_text" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_large"
+        android:paddingHorizontal="@dimen/margin_medium"
+        android:text="Warming up resources..."
+        android:textColor="@color/textColorSecondary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
