--- a/App/app/src/main/res/layout/activity_splash.xml
+++ b/App/app/src/main/res/layout/activity_splash.xml
@@ -7,7 +7,7 @@
     android:background="@color/backgroundColor"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".SplashActivity">
+    tools:context="stcvit.livstory.SplashActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -23,15 +23,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_logo_text" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_large"
-        android:paddingHorizontal="@dimen/margin_medium"
-        android:text="Warming up resources..."
-        android:textColor="@color/textColorSecondary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
